--- a/likelion/account/templates/account/login.html
+++ b/likelion/account/templates/account/login.html
@@ -40,11 +40,11 @@
          <div>
             {{ field.label_tag }}
             {{ field }}
-            {% if field.errors %}
+            <!-- {% if field.errors %}
                {% for error in field.errors %}
                <span>{{ error }}</span>
                {% endfor %}
-            {% endif %}
+            {% endif %} -->
          </div>
       {% endfor %}
 
