--- a/likelion/account/templates/account/login.html
+++ b/likelion/account/templates/account/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="post">
 <div class="left" style="float:left;">
-   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
            <div class="carousel-inner">
              <div class="carousel-item active">
                <img src="{% static 'like42.png' %}" class="d-block w-100" alt="" style="width : 50%; height:900px;">
