--- a/likelion/record/static/css/base.css
+++ b/likelion/record/static/css/base.css
@@ -206,3 +206,13 @@ footer {
     justify-content: center;
     align-items: center; 
 }
+
+/* .left_box {
+    float : left;
+    width : 50%;
+}
+
+.right_box {
+    float : right;
+    width : 50%;
+}  화면 분할*/
