--- a/likelion/record/templates/record/main.html
+++ b/likelion/record/templates/record/main.html
@@ -1,35 +1,69 @@
 {% extends 'record/base.html' %}
 {% block content %}
+
+
 <h1>메인페이지</h1>
-<div>
-{% comment %} {% for category in category_all %}
-    <h3><a href="{% url 'board' category.id %}">{{ category.name }}</h3> {% endcomment %}
+<div  class="col-md-6">
+
+    {% comment %} {% for category in category_all %}
+        <h3><a href="{% url 'board' category.id %}">{{ category.name }}</h3> {% endcomment %}
+    <h3>NEW</h3>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>category</th>
+                    <th>title</th>
+                    <th>writer</th>
+                    <th>date</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for post in posts %}
+                <tr>
+                    <td>{{ post.category }}</td>
+                    <td><a href="{% url 'post_detail' post.id %}">{{ post.title }} [{{ post.comment_set.count }}]</a></td>
+                    <td>user</td>
+                    {% comment %} 유저이름 추가하기 {% endcomment %}
+                    <td>{{ post.created_at }}</td>
+                </tr>
+            {% empty %}
+            <p>게시판이 비었습니다.</p>
+            {% endfor %}
+            </tbody>
+        </table>
+        <br>
+        <br>
+    <h3>
+        MORE<br><br> 
+    </h3>
+    <h4>
+        face book ---  <a href="https://www.facebook.com/LikeLionatCBNU/?ref=br_rs" target="_blank"> GO </a>
+    </h4>
+</div>
+
+<div class="col-md-6">
+<h3>SCHEDULE</h3>
     <table class="table">
         <thead>
-            <tr>
-                <th>category</th>
-                <th>title</th>
-                <th>writer</th>
-                <th>date</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for post in posts %}
-            <tr>
-                <td>{{ post.category }}</td>
-                <td><a href="{% url 'post_detail' post.id %}">{{ post.title }} [{{ post.comment_set.count }}]</a></td>
-                <td>user</td>
-                {% comment %} 유저이름 추가하기 {% endcomment %}
-                <td>{{ post.created_at }}</td>
-            </tr>
-        {% empty %}
-        <p>게시판이 비었습니다.</p>
-        {% endfor %}
-        </tbody>
-    </table>
-    <br>
-{% comment %} {% endfor %} {% endcomment %}
+                <tr>
+                    <th>Date</th>
+                    <th>Schedule</th>
+                    <th>Start</th>
+                    <th>End</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for schedule in schedules %}
+                <tr>
+                    <td>{{ schedule.day }}</td>
+                    <td>{{ schedule.notes }}</td>
+                    <td>{{ schedule.start_time }}</td>
+                    <td>{{ schedule.end_time }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
 
+    </table>
 </div>
 
 {% endblock %}
