--- a/likelion/record/templates/record/member.html
+++ b/likelion/record/templates/record/member.html
@@ -1,6 +1,76 @@
 {% extends 'record/base.html' %}
 {% block content %}
+<h3 id="first">[ 운영진 ]<h4><a href="#second" style="color:white;">학생 보기</a></h4></h3>
           <div class="member"> 
+          <br><br>
+            <div class="row">
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce<br>mail</p>
+                </div><!-- /.col-lg-4 -->
+              </div><!-- /.row -->
+              <br>
+              <br>
+
+              <div class="row">
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce<br>mail</p>
+                  </div><!-- /.col-lg-4 -->
+          </div>
+
+          <div class="member"> 
+          <br><br>
+            <div class="row">
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce <br>mail</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                  <h2>name</h2>
+                  <p>introduce<br>mail</p>
+                  </div><!-- /.col-lg-4 -->
+              </div><!-- /.row -->
+              <br>
+              <br>
+          </div>
+        <hr/>
+        <br>
+        <h3 id="second">[ 학생 ]<h4><a href="#first" style="color:white">운영진 보기</a></h4></h3>
+
+
+
+
+         <div class="member"> 
           <br><br>
             <div class="row">
                 <div class="col-lg-4">
@@ -38,8 +108,11 @@
                   <h2>name</h2>
                   <p>introduce<br>mail</p>
                   </div><!-- /.col-lg-4 -->
+          </div>
 
-              <div class="row">
+          <div class="member"> 
+          <br><br>
+            <div class="row">
                 <div class="col-lg-4">
                   <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
                   <h2>name</h2>
@@ -55,7 +128,10 @@
                   <h2>name</h2>
                   <p>introduce<br>mail</p>
                   </div><!-- /.col-lg-4 -->
-          </div><!-- /.row --> 
+              </div><!-- /.row -->
+              <br>
+              <br>
+          </div>
 {% endblock %}
 
 
