--- a/likelion/schedule/templates/schedule_all.html
+++ b/likelion/schedule/templates/schedule_all.html
@@ -1,64 +1,48 @@
 {% extends 'record/base.html' %}
 
 {% block content %}
-<<<<<<< HEAD
-<div class="col-md-6">
-    <table class="table">
-        <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Schedule</th>
-                    <th>Start</th>
-                    <th>End</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for schedule in schedules %}
-                <tr>
-                    <td>{{ schedule.day }}</td>
-                    <td>{{ schedule.notes }}</td>
-                    <td>{{ schedule.start_time }}</td>
-                    <td>{{ schedule.end_time }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-    </table>
-</div>
-=======
-<table class="table" style="color:white">
-    <thead>
-            <tr>
-                <th>Date</th>
-                <th>Schedule</th>
-                <th>Start</th>
-                <th>End</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for schedule in schedules %}
-            <tr>
-                <td>{{ schedule.day }}</td>
-                <td>{{ schedule.notes }}</td>
-                <td>{{ schedule.start_time }}</td>
-                <td>{{ schedule.end_time }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
->>>>>>> 2735b38a003a5696e6f5003847c2e132c8fd88ec
+<div class="mini_background">
+    <div class="container">
+        <div class="col-md-6">
+        <br><br><br><br><br><br><br>
+            <table class="table" style="color:white;">
+                <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Schedule</th>
+                            <th>Start</th>
+                            <th>End</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for schedule in schedules %}
+                        <tr>
+                            <td>{{ schedule.day }}</td>
+                            <td>{{ schedule.notes }}</td>
+                            <td>{{ schedule.start_time }}</td>
+                            <td>{{ schedule.end_time }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+            </table>
+        </div>
 
-<div class="col-md-6">
-    <br>
-    <br>
-    <h3>add here</h3>
-    <br>
-    <br>
-    <form action="" method="post">
-        {% csrf_token %}
-    <table>
-        {{ form }}
-    </table>
-    <input type="submit" value="SAVE">
-    </form>
+        <div class="col-md-6">
+            <br>
+            <br>
+            <h2>add here</h2>
+            <br>
+            <br>
+            <form action="" method="post">
+                {% csrf_token %}
+            <table>
+                {{ form }}
+            </table>
+            <input type="submit" value="SAVE">
+            </form>
+        </div>
+    </div>
 </div>
+    
 {% endblock %}
 
