--- a/likelion/record/templates/record/post_edit.html
+++ b/likelion/record/templates/record/post_edit.html
@@ -1,13 +1,17 @@
 {% extends 'record/base.html' %}
 {% block content %}
-<div class="post">
-<h1>EDIT</h1>
-<form action = "" method="post" enctype="multipart/form-data" novalidate>
-    {% csrf_token %}
-    <table>
-        {{ form }}
-    </table>
-    <input type="submit" value="EDIT">
-</form>
+<div class="mini_background">
+    <div class="container">
+        <div class="post">
+        <h1>EDIT</h1>
+        <form action = "" method="post" enctype="multipart/form-data" novalidate>
+            {% csrf_token %}
+            <table>
+                {{ form }}
+            </table>
+            <input type="submit" value="EDIT">
+        </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
