--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -52,6 +52,18 @@
         <a  class="logout" href="{% url 'logout'%}">
             <button type="button" class="btn btn-secondary">logout</button>
         </a>
+
+        <style type="text/css">
+        
+            body 
+            { color:white; }
+    
+            </style>
+            <link href="cssfile.css" media="screen and (min-width: 512px) and (max-width: 1024px)" rel="stylesheet"> <!--화면 조정-->
+            <style type="text/css" media="screen and (min-width: 512px) and (max-width:1024px)">  
+             @import url(cssfile.css) screen and (min-width: 152px) and (max-width: 1024px);
+            </style> 
+        
     </head>
 
     <body class="container-fluid">
