--- a/likelion/record/templates/record/warning.html
+++ b/likelion/record/templates/record/warning.html
@@ -1,8 +1,12 @@
 {% extends 'record/base.html' %}
 {% block content %}
-<div class="post">
-    <div class="warning" style="color:white">
-        <h2>자신의 글만 수정/삭제 할 수 있습니다.</h2>
+<div class="mini_background">
+    <div class="container">
+        <div class="post">
+            <div class="warning" style="color:white">
+                <h2>자신의 글만 수정/삭제 할 수 있습니다.</h2>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
